Enhance README with game details and setup instructions
Expanded README with detailed game modes, controls, project structure, requirements, and build instructions.